// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Example Component should change files appropriately 1`] = `
"/**
 * @license
 * Copyright 2020 Dynatrace LLC
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
import { NgModule } from '@angular/core';
import { DtTestComponentModule } from '@dynatrace/barista-components/test-component';
import { DtExampleSimpleTestComponent } from './test-component-simple-example/test-component-simple-example';
import { DtExampleComplexTestComponent } from './test-component-complex-example/test-component-complex-example';
export const DT_TEST_COMPONENT_EXAMPLES = [
  DtExampleSimpleTestComponent,
  DtExampleComplexTestComponent,
];

@NgModule({
  imports: [DtTestComponentModule],
  declarations: [...DT_TEST_COMPONENT_EXAMPLES],
  entryComponents: [...DT_TEST_COMPONENT_EXAMPLES],
})
export class DtExamplesTestComponentModule {}
"
`;

exports[`Add Example Component should change files appropriately 2`] = `
"/**
 * @license
 * Copyright 2020 Dynatrace LLC
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

export * from './test-component-examples.module';
export * from './test-component-simple-example/test-component-simple-example';
export * from './test-component-complex-example/test-component-complex-example';
"
`;

exports[`Add Example Component should generate files with the appropriate content 1`] = `
"/**
 * @license
 * Copyright 2020 Dynatrace LLC
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

export * from './test-component-examples.module';
export * from './test-component-simple-example/test-component-simple-example';
"
`;

exports[`Add Example Component should generate files with the appropriate content 2`] = `
"/**
 * @license
 * Copyright 2020 Dynatrace LLC
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
import { NgModule } from '@angular/core';
import { DtTestComponentModule } from '@dynatrace/barista-components/test-component';
import { DtExampleSimpleTestComponent } from './test-component-simple-example/test-component-simple-example';

export const DT_TEST_COMPONENT_EXAMPLES = [DtExampleSimpleTestComponent];

@NgModule({
  imports: [DtTestComponentModule],
  declarations: [...DT_TEST_COMPONENT_EXAMPLES],
  entryComponents: [...DT_TEST_COMPONENT_EXAMPLES],
})
export class DtExamplesTestComponentModule {}
"
`;

exports[`Add Example Component should generate files with the appropriate content 3`] = `
"<dt-test-component></dt-test-component>
"
`;

exports[`Add Example Component should generate files with the appropriate content 4`] = `
"/**
 * @license
 * Copyright 2020 Dynatrace LLC
 * Licensed under the Apache License, Version 2.0 (the \\"License\\");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an \\"AS IS\\" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import { Component } from '@angular/core';

@Component({
  selector: 'dt-example-simple-test-component',
  templateUrl: './test-component-simple-example.html',
})
export class DtExampleSimpleTestComponent {}
"
`;
